// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmModal disappears correctly after dismissing 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      nativeID="animatedComponent"
      style={Object {}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 16,
        "margin": 32,
        "padding": 32,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "position": "absolute",
              "right": 0,
            }
          }
          testID="modal-header-close"
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#3742fa",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                }
              }
            >
              Done
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Object {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ConfirmModal renders correctly 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      nativeID="animatedComponent"
      style={Object {}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 16,
        "margin": 32,
        "padding": 32,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "position": "absolute",
              "right": 0,
            }
          }
          testID="modal-header-close"
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#3742fa",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                }
              }
            >
              Done
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Object {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </RCTScrollView>
</Modal>
`;

exports[`ConfirmModal renders correctly with text input 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <RNGestureHandlerButton
    collapsable={false}
    onGestureEvent={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onHandlerStateChange={[Function]}
    rippleColor={0}
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.25)",
        "bottom": 0,
        "flex": 1,
        "left": 0,
        "padding": 32,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      nativeID="animatedComponent"
      style={Object {}}
    />
  </RNGestureHandlerButton>
  <RCTScrollView
    collapsable={false}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 16,
        "margin": 32,
        "padding": 32,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 16,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#000",
              "fontSize": 20,
              "fontWeight": "500",
              "lineHeight": 26,
              "textAlign": "left",
            }
          }
        >
          Title
        </Text>
        <RNGestureHandlerButton
          collapsable={false}
          onGestureEvent={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onHandlerStateChange={[Function]}
          rippleColor={0}
          style={
            Object {
              "position": "absolute",
              "right": 0,
            }
          }
          testID="modal-header-close"
        >
          <View
            accessible={true}
            collapsable={false}
            nativeID="animatedComponent"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#3742fa",
                  "fontSize": 20,
                  "fontWeight": "500",
                  "lineHeight": 26,
                  "textAlign": "left",
                }
              }
            >
              Done
            </Text>
          </View>
        </RNGestureHandlerButton>
      </View>
      <Text
        style={
          Object {
            "color": "#000",
            "fontSize": 20,
            "lineHeight": 26,
            "marginBottom": 16,
            "textAlign": "left",
          }
        }
      >
        Description
      </Text>
      <TextInput
        editable={true}
        onChangeText={[Function]}
        placeholder=""
        style={
          Array [
            Object {
              "color": "#000",
              "fontSize": 20,
              "lineHeight": 26,
              "marginBottom": 16,
              "textAlign": "left",
            },
            Object {
              "backgroundColor": "#fff",
              "borderRadius": 8,
              "flex": 1,
              "padding": 8,
            },
            Object {
              "borderColor": "#000",
              "borderWidth": 1,
            },
          ]
        }
        testID="confirm-modal-input"
        value=""
      />
      <RNGestureHandlerButton
        collapsable={false}
        onGestureEvent={[Function]}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        onHandlerStateChange={[Function]}
        rippleColor={0}
        style={
          Object {
            "marginBottom": 16,
            "width": "100%",
          }
        }
        testID="confirm-modal-confirm"
      >
        <View
          accessible={true}
          collapsable={false}
          nativeID="animatedComponent"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "#3742fa",
                  "borderColor": "#3742fa",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "padding": 8,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#000",
                    "fontSize": 20,
                    "lineHeight": 26,
                    "textAlign": "left",
                  },
                  Object {
                    "textAlign": "center",
                  },
                  Object {
                    "color": "#fff",
                  },
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </RNGestureHandlerButton>
    </View>
  </RCTScrollView>
</Modal>
`;
